--- a/Copy_of_Mini_Projects_2.ipynb
+++ b/Copy_of_Mini_Projects_2.ipynb
@@ -308,22 +308,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "288f4bd0-dc68-4f99-e227-3fb7a3ee58a0"
+        "outputId": "e6cb5b94-c03b-4e62-c8b4-1ba31416dd01"
       },
       "source": [
         "for i in range(6,0,-1):\n",
-        "  print(1*\"*\")"
+        "  print(i*\"*\")"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "*\n",
-            "*\n",
-            "*\n",
-            "*\n",
-            "*\n",
+            "******\n",
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
             "*\n"
           ],
           "name": "stdout"
